# netlogger

./: .gitignore  pyproject.toml  requirements.txt
netlogger/: cli.py  connection_info.py  connection_parser.py  connection_raw.py  connection_table.py  dns_resolver.py
netlogger/connections/: endpoint.py
uml diagrams/: classdiagram.puml
